--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -11,6 +11,12 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Ensure Waka section exists
+        run: |
+          if ! grep -q "<!--START_SECTION:waka-->" README.md; then
+            echo -e "\n<!--START_SECTION:waka-->\n<!--END_SECTION:waka-->" >> README.md
+          fi
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
